# inventory-manager

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
migrations/: 0001_setup.sql
src/: commands.rs  database.rs  main.rs  utils.rs
src/database/sqlite/: mod.rs
src/database/sqlite/sql/v0001/: after_user_registration_trigger.sql  create_config_table.sql  create_config_trigger.sql  create_event_tx_table.sql  create_inventory_schema_tx_table.sql  create_inventory_table.sql  create_inventory_trigger.sql  create_inventory_tx_table.sql  create_roles_table.sql  create_users_table.sql  create_users_trigger.sql  insert_default_config.sql  insert_default_roles.sql
src/lib/: database.rs  lib.rs  utils.rs
src/lib/common/: args.rs
src/lib/database/sqlite/: mod.rs
src/lib/database/sqlite/sql/v0001/: after_user_registration_trigger.sql  create_config_table.sql  create_config_trigger.sql  create_inventory_table.sql  create_inventory_tx_table.sql  create_permissions_table.sql  create_roles_permissions_table.sql  create_roles_trigger.sql  insert_default_permissions.sql  insert_default_roles_permissions.sql
src/sql/sqlite/: create_articles_table.sql  create_roles_trigger.sql  create_users_table.sql  create_users_trigger.sql  insert_default_config.sql
