[package]
name = "inventory-manager"
authors = ["Maik Steiger <m.steiger@csurielektronics.com>"]
license = "GPLv3"
license-file="LICENSE"
readme="README.md"
description="Manage your inventory system in a homogenous way"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = { version = "0.5.2", features = ["std"] }
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
